--- a/06-modal/setup/index.html
+++ b/06-modal/setup/index.html
@@ -13,7 +13,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>modal project</h1>
+    <!-- hero -->
+    <header class="hero">
+      <div class="banner">
+        <h1>Modal Project</h1>
+        <button class="btn modal-btn">Open Modal</button>
+      </div>
+    </header>
+
+    <!-- modal -->
+    <div class="modal-overlay">
+      <div class="modal-container">
+        <button class="close-btn"><i class="fas fa-times"></i></button>
+        <h3>Modal Content</h3>
+      </div>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
