--- a/08-menu/setup/index.html
+++ b/08-menu/setup/index.html
@@ -13,7 +13,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <!-- title -->
+      <div class="title">
+        <h2>Our Menu</h2>
+        <div class="underline"></div>
+      </div>
+
+      <!-- filter buttons -->
+      <div class="btn-container">
+        <!-- <button type="button" class="filter-btn" data-id="all">All</button>
+        <button type="button" class="filter-btn" data-id="breakfast">breakfast</button>
+        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+        <button type="button" class="filter-btn" data-id="shakes">shakes</button> -->
+      </div>
+
+      <!-- menu items -->
+      <div class="section-center">
+        <!-- single item -->
+        <!-- <article class="menu-item">
+          <img src="menu-item.jpeg" alt="menu-item" class="photo">
+          <div class="item-info">
+            <header>
+              <h4>Buttermilk Pancakes</h4>
+              <h4 class="price">15.99</h4>
+            </header>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cumque officia laudantium? Sunt, repellendus dolor quia impedit explicabo minus expedita?</p>
+          </div>
+        </article> -->
+        <!-- end of single item -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
